C.Hybrid and multi-cloud/Architecting Hybrid Cloud Infra with Anthos/2.x/labs/022-North-south routing/external-http-gateway-gke-west-1.yaml
cat <<EOF > external-http-gateway.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: store
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-http
  namespace: store
spec:
  gatewayClassName: gke-l7-gxlb-mc
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
EOF
kubectl apply -f external-http-gateway.yaml --context=gke-west-1
